Fixed Header Size on Mobile.

--- a/css/styles.css
+++ b/css/styles.css
@@ -199,7 +199,7 @@ footer li {
 /* MOBILE */
 @media (min-width: 200px) and (max-width: 850px) {
     html {
-        padding: 2rem;
+        padding: 3rem;
     }
 
     header h1 {
